--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style0.css">
     <!--<link href='https://fonts.googleapis.com/css?family=Yellowtail' rel='stylesheet'>-->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'>
-    <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet'>
-    <link href='http://fonts.googleapis.com/css?family=Leckerli+One' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Leckerli+One' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
     <title></title>
   </head>
